// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionWrapper render should display hybrid style 1`] = `
<div
  className="action has_router"
  data-spec="action-container"
  id="action-68b029c9-6400-4f46-947a-b61c619a7198"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="send_msg"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={false}
      showRemoval={true}
      title="Send Message"
    />
    <div
      className="body send_msg"
      data-spec="action-body"
    />
  </div>
</div>
`;

exports[`ActionWrapper render should display missing_localization style 1`] = `
<div
  className="action translating missing_localization"
  data-spec="action-container"
  id="action-0ed4b887-2924-45ea-babe-4d580cdfb000"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="send_msg"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={false}
      showRemoval={false}
      title="Send Message"
    />
    <div
      className="body send_msg"
      data-spec="action-body"
    />
  </div>
</div>
`;

exports[`ActionWrapper render should display not_localizable style 1`] = `
<div
  className="action translating not_localizable"
  data-spec="action-container"
  id="action-d4a3a01c-1dee-4324-b107-4ac7a21d836f"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="start_flow"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={false}
      showRemoval={false}
      title="Start a Flow"
    />
    <div
      className="body start_flow"
      data-spec="action-body"
    />
  </div>
</div>
`;

exports[`ActionWrapper render should display translating style 1`] = `
<div
  className="action translating missing_localization"
  data-spec="action-container"
  id="action-68b029c9-6400-4f46-947a-b61c619a7198"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="send_msg"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={false}
      showRemoval={false}
      title="Send Message"
    />
    <div
      className="body send_msg"
      data-spec="action-body"
    />
  </div>
</div>
`;

exports[`ActionWrapper render should render self, children with base props 1`] = `
Object {
  "__className": "send_msg",
  "onMoveUp": [Function],
  "onRemoval": [Function],
  "shouldCancelClick": [Function],
  "showMove": false,
  "showRemoval": true,
  "title": "Send Message",
}
`;

exports[`ActionWrapper render should render self, children with base props 2`] = `
<div
  className="action"
  data-spec="action-container"
  id="action-68b029c9-6400-4f46-947a-b61c619a7198"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="send_msg"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={false}
      showRemoval={true}
      title="Send Message"
    />
    <div
      className="body send_msg"
      data-spec="action-body"
    />
  </div>
</div>
`;

exports[`ActionWrapper render should show move icon 1`] = `
<div
  className="action"
  data-spec="action-container"
  id="action-68b029c9-6400-4f46-947a-b61c619a7198"
>
  <div
    className="overlay"
    data-spec="action-overlay"
  />
  <div
    data-spec="interactive-div"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <TitleBar
      __className="send_msg"
      onMoveUp={[Function]}
      onRemoval={[Function]}
      shouldCancelClick={[Function]}
      showMove={true}
      showRemoval={true}
      title="Send Message"
    />
    <div
      className="body send_msg"
      data-spec="action-body"
    />
  </div>
</div>
`;
